--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ GitPython==3.1.44
 humanfriendly==10.0
 idna==3.10
 immutables==0.21
+iniconfig==2.0.0
 Jinja2==3.1.6
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
@@ -23,8 +24,10 @@ nbformat==5.10.4
 packaging==24.2
 plac==1.4.3
 platformdirs==4.3.6
+pluggy==1.5.0
 psutil==7.0.0
 PuLP==2.9.0
+pytest==8.3.5
 PyYAML==6.0.2
 referencing==0.36.2
 requests==2.32.3
