--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.8', '3.9', '3.10']  # Test across multiple Python versions
+        python-version: ['3.12', '3.13']  # Test across multiple Python versions
 
     steps:
       # Checkout the repository
@@ -73,7 +73,7 @@ jobs:
 #    runs-on: ubuntu-latest
 #    strategy:
 #      matrix:
-#        python-version: ['3.10']  # Validate Snakemake with one version (adjust as needed)
+#        python-version: ['3.13']  # Validate Snakemake with one version (adjust as needed)
 #
 #    steps:
 #      # Checkout the repository
