--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ charset-normalizer==3.4.1
 conda-inject==1.3.2
 ConfigArgParse==1.7
 connection_pool==0.0.3
+coverage==7.6.12
 docutils==0.21.2
 dpath==2.2.0
 fastjsonschema==2.21.1
@@ -28,6 +29,7 @@ pluggy==1.5.0
 psutil==7.0.0
 PuLP==2.9.0
 pytest==8.3.5
+pytest-cov==6.0.0
 PyYAML==6.0.2
 referencing==0.36.2
 requests==2.32.3
