--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -47,7 +47,7 @@ jobs:
       # Run pytest tests
       - name: Run pytest
         run: |
-          pytest --junitxml=test-results.xml --cov=scripts/ --cov-report=xml
+          pytest
         env:
           PYTHONPATH: ${{ github.workspace }}  # Ensures scripts/ is importable
 
