--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 appdirs==1.4.4
 argparse-dataclass==2.0.0
 attrs==25.1.0
+boto3~=1.37.15
+botocore~=1.37.15
 certifi==2025.1.31
 charset-normalizer==3.4.1
 conda-inject==1.3.2
