--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -50,6 +50,7 @@ jobs:
           python -m pytest
         env:
           PYTHONPATH: ${{ github.workspace }}  # Ensures scripts/ is importable
+          AWS_PROFILE: ${{ secrets.AWS_PROFILE_STRING }}
 
       # Publish test results
       - name: Publish Test Results
