--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,6 +14,9 @@ on:
 jobs:
   test_python:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write  # Add this to allow OIDC token access
+      contents: read   # Required for checkout
     strategy:
       matrix:
         python-version: ['3.12', '3.13']  # Test across multiple Python versions
