Test trim_with_fastp step added to relevant configs. Added merging of platform-specific (local, slurm...) and pipeline_specific config directories.

--- a/config/cluster_submit.yaml
+++ b/config/cluster_submit.yaml
@@ -16,7 +16,7 @@ execution:
 #  use_conda: true
   dry_run: false
   cluster_config: "config/cluster.yaml"  # Optional: SLURM-specific settings
-align_reads_step:
+trim_with_fastp:
   nodes: 1
   cpus-per-task: "{resources.cpus}"
   mem: "{resources.mem_mb}M"
